test/corpus/injections.txt
================================================================================
global shebang
================================================================================
#!/usr/bin/env just

--------------------------------------------------------------------------------

(source_file
  (shebang
    (language)))
