test/corpus/newlines.txt
================================================================================
trailing whitespace
================================================================================

a: #
--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      (identifier))
      (comment)))


